# XboxEepromReadWrite

./: .gitignore  ArduinoProm.ino  README.md  pyproject.toml
arduino_prom/: __main__.py  arduino_prom.py
